Fix task info alignment using flex basis

--- a/src/style.css
+++ b/src/style.css
@@ -82,8 +82,8 @@ body {
   margin-right: 20px;
 }
 
-.taskListItemText, .date {
-  margin-right: 100px;
+.taskListItemText, .date, #taskButtonDiv {
+  flex-basis: 30%;
 }
 
 #upcoming:hover, .projectListItem:hover {
